[package]
name = "chrono_rabbit"
version = "0.1.0"
authors = ["asheraryam <asheraryam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 'z'  # Optimize for size.
# lto = true
# panic = 'abort'

[dependencies]
chrono = "0.4.19"
serenity = "0.9.1"
task_scheduler = { git = "https://github.com/asheraryam/task_scheduler", branch = "async" }
parking_lot = "0.11.0"
job_scheduler = { git = "https://github.com/asheraryam/job_scheduler", branch = "async" }
syslog = "5.0.0"
log = "0.4.11"
log-panics = "2.0.0"
tokio = { version = "0.2.0", features = ["macros"] }
lazy_static = "1.4.0"
futures = {version = "0.3.5", features = ["async-await"]}